# sentiment-analyzer-gsk

./: .checkov.baseline  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .puppeteerrc.cjs  .secrets.baseline  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLEANUP-BOARD.html  CONTEXT-CARRYOVER-2026-02-03-session4.md  CONTEXT-CARRYOVER-2026-02-03-session5.md  CONTRIBUTING.md  DECISION_SUMMARY.md  DEMO_URLS.local.md  DRIFT-INVENTORY.md  IMPLEMENTATION_GUIDE.md  INSTRUCTIONS setup sentiment analyzer.txt  LICENSE  METRICS_COMPARISON.md  Makefile  README.md  RECOMMENDATION.md  RESULT1-validation-gaps.md  RESULT2-tech-debt.md  RESULT3-deferred-debt-status.md  SECURITY.md  SENTIMENT_ANALYSIS_INDEX.md  SENTIMENT_MODEL_COMPARISON.md  SESSION_SUMMARY_WSL_DEPLOYMENT.md  SPEC.md  bidirectional-allowlist.yaml  docker-compose.yml  iam-allowlist.yaml  index.html  mermaid-config.json  naming-config.yaml  package-lock.json  package.json  (+5 more)
.claude/commands/: api-gateway-audit.md  dev-loop.md  flush-branches.md  iam-audit.md  poke-stale-prs.md  sri-validate.md
.devcontainer/: README.md  devcontainer.json
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOW_DOCUMENTATION.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-and-promote.yml  codeql.yml  dependabot-auto-merge.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  e2e-preprod.yml  feature-auto-pr.yml  integration.yml  lint.yml  nightly-e2e.yml  pipeline-1-build.yml  pipeline-2-deploy-preprod.yml  pipeline-3-test-preprod.yml  pipeline-4-deploy-prod.yml  pr-approval-enforcement.yml  pr-auto-merge-enable.yml  pr-auto-rebase.yml  pr-check-codeql.yml  pr-check-lint.yml  pr-check-security.yml  pr-check-test.yml  pr-checks.yml  pr-merge.yml  preprod-validation.yml  security.yml  test.yml  update-pr-branches.yml
.specify/memory/: constitution.md
.specify/methodologies/: index.yaml
.specify/specs/: ohlc-cache-remediation-clarifications.md  ohlc-cache-remediation-tests.md  ohlc-cache-remediation.md
.specify/testing/: taxonomy-registry.yaml
chaos-plans/: cold-start-resilience.yaml  ingestion-resilience.yaml
docs/: API_GATEWAY_GAP_ANALYSIS.md  ARCHITECTURE_DECISIONS.md  AUTH_SESSION_LIFECYCLE.md  CHAOS_TESTING_OPERATOR_GUIDE.md  CI_CD_LESSONS_LEARNED.md  CI_CD_WORKFLOWS.md  CLOUD_PROVIDER_PORTABILITY_AUDIT.md  CODEQL-PRE-PUSH-HOOK.md  CONTAINER_IMAGE_OPERATIONAL_READINESS.md  CRITICAL_TESTING_MISTAKE.md  DASHBOARD_SECURITY_ANALYSIS.md  DASHBOARD_SPEC.md  DASHBOARD_TESTING_BACKLOG.md  DATA_FLOW_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_CONCURRENCY.md  ENVIRONMENT_STRATEGY.md  FAILURE_RECOVERY_RUNBOOK.md  FRONTEND_DEPENDENCY_MANAGEMENT.md  FUTURE_WORK.md  GET_DASHBOARD_RUNNING.md  GITHUB_ENVIRONMENTS_SETUP.md  GITHUB_SECRETS_CONFIGURATION.md  GITHUB_SECRETS_SETUP.md  GIT_WORKFLOW.md  GPG_SETUP.md  GPG_SIGNING_SETUP.md  IAM_JUSTIFICATIONS.md  IAM_TERRAFORM_TROUBLESHOOTING.md  INTERFACE-ANALYSIS-SUMMARY.md  LAMBDA_DEPENDENCY_ANALYSIS.md  LESSONS_LEARNED.md  LOG_VALIDATION_STATUS.md  OPERATIONAL_FLOWS.md  PHASE_1_2_SUMMARY.md  PHASE_3_SUMMARY.md  PREPROD_DASHBOARD_INVESTIGATION_SUMMARY.md  PREPROD_DEPLOYMENT_ANALYSIS.md  PRODUCTION_PREFLIGHT_CHECKLIST.md  PROMOTION_WORKFLOW_DESIGN.md  (+22 more)
docs/architecture/: ADR-005-LAMBDA-PACKAGING-STRATEGY.md  ARCHITECTURE_DECISIONS.md  DATA_FLOW_AUDIT.md  INTERFACE-ANALYSIS-SUMMARY.md  USE-CASE-DIAGRAMS.md  pipeline-consolidation.md  real-time-multi-resolution-architecture.md
docs/archive/: CONTAINER_MIGRATION_SECURITY_ANALYSIS.md  DEMO_URLS.template.md  LAMBDA_DEPENDENCY_ANALYSIS.md  PREPROD_HTTP_502_ROOT_CAUSE.md  ui-improvement-report-unusualwhales.md
docs/archived-specs/: README.md
docs/audit/: 2026-02-13-playwright-coverage-observability-blind-spots.md
docs/cache/: HL-cache-remediation-checklist.md  fix-cache-key.md  fix-cache-reading.md  fix-cache-tests.md  fix-cache-writing.md  fix-local-api-tables.md
docs/chaos-testing/: PHASE3_API_FAILURE.md  PHASE3_NEWSAPI_FAILURE.md  PHASE4_LAMBDA_DELAY.md  gameday-runbook.md  preflight-checklist.md
docs/cleanup/: README.md  dependency-map.md  diagram-drift.md  open-questions.md  url-inventory.md  validator-inventory.md  whitelist-ledger.md
docs/cleanup-pristine/: DELTA.md  comments-drift.md  dead-code.md  diagram-drift.md  m1-verifier-convention.md  milestone-1-verifiable-auth.md  open-questions.md  url-inventory.md  validator-inventory.md  whitelist-ledger.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_CONCURRENCY.md  ENVIRONMENT_STRATEGY.md  FIRST_PROD_DEPLOY_READY.md  GITHUB_SECRETS_SETUP.md  PROMOTION_PIPELINE_MASTER_SUMMARY.md  PROMOTION_WORKFLOW_DESIGN.md  TERRAFORM_DEPLOYMENT_FLOW.md
frontend/: .env.example  .gitignore  amplify.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
inbox/: 2026-04-01-zombie-function-url.md
interview/: FUTURE_IMPROVEMENTS.md  README.md  index.html  traffic_generator.py
reports/: trace-inspection-2026-03-19-v2.md  trace-inspection-2026-03-19-v3.md  trace-inspection-2026-03-19.md
scripts/: audit-e2e-skips.py  audit_duplicate_provider_subs.py  bootstrap-workspace.sh  check-annotation-budget.sh  check-annotation-pii.sh  check-banned-terms.sh  check-branch-collision.sh  check-dual-error-pattern.sh  check-error-log-assertions.sh  check-false-pass-patterns.sh  check-iam-patterns.sh  check-workflows.sh  cleanup_orphaned_sessions.py  detect-secrets-autostage.sh  generate_openapi.py  migrate_status_field.py  pre-commit  redact-oauth-evidence.py  refresh-secrets-cache.sh  regenerate-mermaid-url.py  run-local-api.py  screenshot_dashboard.py  setup-git-hooks.sh  setup-github-secrets.sh  sse_diagnostic.py  terraform-env-wiring.sh  trace_inspection.py  trace_inspection_v3.py  verify-dev-environment.sh  verify-dual-emit.py  verify-newsapi-purge.sh  verify-oauth-deploy.sh
specs/: SESSION-SUMMARY-2.md  SESSION-SUMMARY-3.md  SESSION-SUMMARY.md  chaos-testing-implementation-plan.md  chaos-testing-system.md  oauth-provisioning-plan.md
src/: README.md  __init__.py
tests/: README.md  __init__.py  conftest.py
(+2598 files in other folders)
