# Python Project Configuration
# Sentiment Analyzer - Demo 1 (001-interactive-dashboard-demo)
#
# For On-Call Engineers:
# - Python version must be 3.11 (matches Lambda runtime)
# - If import errors occur, verify virtual environment matches this config
#
# For Developers:
# - Use pyproject.toml for all tool configuration (single source of truth)
# - Run formatters: black src/ tests/
# - Run linters: ruff check src/ tests/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analyzer"
version = "0.1.0"
description = "Real-time sentiment analysis pipeline with interactive dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Sentiment Analyzer Team"}
]
keywords = ["sentiment-analysis", "aws-lambda", "dynamodb", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies managed in requirements.txt for Lambda compatibility
# This section is for metadata only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "moto>=4.2.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[project.urls]
"Bug Tracker" = "https://github.com/your-org/sentiment-analyzer-gsk/issues"
"Documentation" = "https://github.com/your-org/sentiment-analyzer-gsk#readme"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # project-specific
  | node_modules
  | infrastructure
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert used (OK in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded passwords OK in test fixtures
    "S106",  # hardcoded passwords OK in test fixtures
]
"src/lambdas/shared/errors.py" = [
    "S105",  # error code constants are not passwords
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "infrastructure/",
    "node_modules/",
]

[tool.pytest.ini_options]
# Main pytest configuration - see also pytest.ini for additional settings
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",           # Show extra test summary
    "--strict-markers",
    "--tb=short",    # Shorter tracebacks
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
# On-Call Note: Coverage below 80% will fail CI/CD pipeline
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
