# Python Project Configuration
# Sentiment Analyzer - Demo 1 (001-interactive-dashboard-demo)
#
# For On-Call Engineers:
# - Python version must be 3.13 (matches Lambda runtime)
# - If import errors occur, verify virtual environment matches this config
#
# For Developers:
# - Use pyproject.toml for all tool configuration (single source of truth)
# - Run formatters: black src/ tests/
# - Run linters: ruff check src/ tests/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analyzer"
version = "0.1.0"
description = "Real-time sentiment analysis pipeline with interactive dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Sentiment Analyzer Team"}
]
keywords = ["sentiment-analysis", "aws-lambda", "dynamodb", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies managed in requirements.txt for Lambda compatibility
# This section is for metadata only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "moto>=4.2.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    # E2E test dependencies (008-e2e-validation-suite)
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "boto3>=1.34.0",
    "aws-xray-sdk>=2.12.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/your-org/sentiment-analyzer-gsk/issues"
"Documentation" = "https://github.com/your-org/sentiment-analyzer-gsk#readme"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py312']  # Black doesn't have py313 target yet, py312 is latest
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # project-specific
  | node_modules
  | infrastructure
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"  # Ruff doesn't have py313 target yet, py312 is latest
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert used (OK in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded passwords OK in test fixtures
    "S106",  # hardcoded passwords OK in test fixtures
]
"src/lambdas/shared/errors.py" = [
    "S105",  # error code constants are not passwords
]
"src/lambdas/*/handler.py" = [
    "E402",  # X-Ray must be imported and patched before other imports
]
"src/lambdas/dashboard/router_v2.py" = [
    "B008",  # Depends() in function defaults is FastAPI's recommended pattern
]
"src/lambdas/dashboard/ohlc.py" = [
    "B008",  # Query/Depends in function defaults is FastAPI's recommended pattern
    "S311",  # random module used for synthetic test data generation
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "infrastructure/",
    "node_modules/",
]

# Note: pytest configuration is in pytest.ini (not here) to avoid duplication warning
# pytest.ini has complete config with markers, logging, and documentation

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
branch = true
relative_files = true

[tool.coverage.report]
# On-Call Note: Coverage below 80% will fail CI/CD pipeline
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
