# Python Project Configuration
# Sentiment Analyzer - Demo 1 (001-interactive-dashboard-demo)
#
# For On-Call Engineers:
# - Python version must be 3.13 (matches Lambda runtime)
# - If import errors occur, verify virtual environment matches this config
#
# For Developers:
# - Use pyproject.toml for all tool configuration (single source of truth)
# - Run formatters: ruff format src/ tests/
# - Run linters: ruff check src/ tests/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analyzer"
version = "0.1.0"
description = "Real-time sentiment analysis pipeline with interactive dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "Sentiment Analyzer Team"}
]
keywords = ["sentiment-analysis", "aws-lambda", "dynamodb", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies managed in requirements.txt for Lambda compatibility
# This section is for metadata only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "moto>=4.2.0",
    "ruff>=0.8.0",
    # E2E test dependencies (008-e2e-validation-suite)
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "boto3>=1.34.0",
    "aws-xray-sdk>=2.12.0",
    # SAST tools (070-validation-blindspot-audit)
    "bandit>=1.7.0",
    "semgrep>=1.50.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/your-org/sentiment-analyzer-gsk/issues"
"Documentation" = "https://github.com/your-org/sentiment-analyzer-gsk#readme"

# =============================================================================
# Tool Configuration
# =============================================================================

# Note: Black configuration removed in feat(057) - migrated to Ruff formatter
# Ruff formatter preserves pragma comments (# noqa, # nosec, # type:) by excluding
# them from line length calculations, preventing drift on long lines.

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "RUF100", # Detect unused noqa directives
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "S101",  # assert used (OK in tests)
]
# Tell Ruff about external rule codes used by Bandit (not Ruff-native)
external = ["B108", "B202", "B324"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded passwords OK in test fixtures
    "S106",  # hardcoded passwords OK in test fixtures
    "S108",  # /tmp paths OK in tests (mocked)
    "S110",  # try-except-pass OK in test cleanup/chaos tests
    "S311",  # random module OK for test data generation
    "E402",  # Module-level imports OK after sys.path manipulation
    "C420",  # dict comprehension style OK in tests
]
"src/lambdas/shared/errors.py" = [
    "S105",  # error code constants are not passwords
]
"src/lambdas/shared/errors_module.py" = [
    "S105",  # error code constants are not passwords
]
"src/lambdas/shared/auth/cognito.py" = [
    "S105",  # token_type = "Bearer" is not a password
]
"src/lambdas/*/handler.py" = [
    "E402",  # X-Ray must be imported and patched before other imports
]
"src/lambdas/dashboard/router_v2.py" = [
    "B008",  # Depends() in function defaults is FastAPI's recommended pattern
]
"src/lambdas/dashboard/ohlc.py" = [
    "B008",  # Query/Depends in function defaults is FastAPI's recommended pattern
    "S311",  # random module used for synthetic test data generation
]
# MD5 used for cache keys (non-cryptographic) - pre-existing code
"src/lambdas/shared/adapters/tiingo.py" = ["S324"]
"src/lambdas/shared/adapters/finnhub.py" = ["S324"]
"src/lambdas/dashboard/sentiment.py" = ["S324"]
# Lambda requires /tmp storage and tarfile.extractall from trusted S3 source
"src/lambdas/analysis/sentiment.py" = ["S108", "S202"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "infrastructure/",
    "node_modules/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers --tb=short -v"
log_cli = true
log_cli_level = "WARNING"
log_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
    "ignore::DeprecationWarning:urllib3.*:",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests with multiple components",
    "contract: Contract tests validating API schemas",
    "e2e: End-to-end tests against real AWS preprod environment",
    "slow: Tests that take >5 seconds",
    "smoke: Smoke tests that must pass before production deployment",
    "preprod: Preprod-only tests (requires AWS credentials)",
    "benchmark: Performance benchmark tests (not blocking)",
    "auth: Authentication-related tests",
    "cleanup: Manual cleanup utilities",
    "manual: Tests that require manual triggering",
    "us1: User Story 1 - Anonymous to Authenticated flow",
    "us2: User Story 2 - OAuth authentication flows",
    "us3: User Story 3 - Configuration CRUD operations",
    "us4: User Story 4 - Sentiment and Volatility data",
    "us5: User Story 5 - Alert rule lifecycle",
    "us6: User Story 6 - Notification delivery pipeline",
    "us7: User Story 7 - Rate limiting enforcement",
    "us8: User Story 8 - Circuit breaker behavior",
    "us9: User Story 9 - Ticker validation",
    "us10: User Story 10 - Real-time SSE updates",
    "us11: User Story 11 - CloudWatch observability",
    "us12: User Story 12 - Market status",
    "ohlc: OHLC price data endpoint tests",
    "sentiment_history: Sentiment history endpoint tests",
    "error_resilience: Error injection and fallback tests",
    "boundary: Boundary value and edge case tests",
    "session_consistency: Feature 014 - Session consistency tests",
    "session_us1: User Story 1 - Consistent session across tabs",
    "session_us2: User Story 2 - Concurrent magic link verification",
    "session_us3: User Story 3 - Email uniqueness guarantee",
    "session_us4: User Story 4 - Session refresh",
    "session_us5: User Story 5 - Atomic account merge",
    "session_us6: User Story 6 - Fast email lookup",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]
branch = true
relative_files = true

[tool.bandit]
# Bandit security linter configuration (070-validation-blindspot-audit)
# Block HIGH and MEDIUM severity; report LOW
targets = ["src/"]
exclude_dirs = ["tests/", "infrastructure/", ".venv/", "venv/"]
severity = "medium"  # Report MEDIUM and above
confidence = "medium"  # Report MEDIUM confidence and above

[tool.coverage.report]
# On-Call Note: Coverage below 80% will fail CI/CD pipeline
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
